# evidence-sync

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  monitor.yml
datasets/ssri-depression/: config.yaml
docs/: methodology.md
src/evidence_sync/: __init__.py  accuracy.py  app.py  cli.py  config.py  dashboard.py  drift.py  export.py  extractor.py  fulltext.py  models.py  monitor.py  prisma.py  protocol.py  review.py  sanitize.py  screening.py  statistics.py  versioning.py
tests/: conftest.py  test_accuracy.py  test_automation.py  test_config.py  test_dashboard.py  test_drift.py  test_export.py  test_extractor.py  test_fulltext.py  test_integration.py  test_models.py  test_monitor.py  test_multi_model.py  test_prisma.py  test_protocol.py  test_review.py  test_screening.py  test_security.py  test_statistics.py  test_validation.py  test_versioning.py
tests/ground_truth/: 30012345.yaml  30023456.yaml  30034567.yaml  30045678.yaml  30056789.yaml  30067890.yaml  30078901.yaml  30089012.yaml  30090123.yaml  30101234.yaml  30112345.yaml  30123456.yaml  30134567.yaml  30145678.yaml  30156789.yaml  30167890.yaml  30178901.yaml  30189012.yaml  30190123.yaml  30201234.yaml  30212345.yaml  30223456.yaml  30234567.yaml  30245678.yaml  30256789.yaml
